unpackaged/main/default/objects/Case/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <formula>POS_Solution__r.Account__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Email</label>
    <type>Text</type>
</CustomField>