unpackaged/main/default/objects/Case/fields/Account_Owner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_Address__c</fullName>
    <label>Account Owner Email Address</label>
    <type>Email</type>
</CustomField>