unpackaged/main/default/objects/Case/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <formula>IF(TEXT(Country_Office__c) = &quot;United Kingdom&quot;, &quot;47-49 London Road&quot;, 
IF(TEXT(Country_Office__c) = &quot;Ireland&quot;, &quot;32 Upper Baggot Street&quot;, 
IF(TEXT(Country_Office__c) = &quot;France&quot;, &quot;140, Boulevard Malesherbes&quot;, 
IF(TEXT(Country_Office__c) = &quot;Germany&quot;, &quot;Sapporobogen 6-8&quot;, 
IF(TEXT(Country_Office__c) = &quot;Italy&quot;, &quot;Via Gregoriana 54&quot;, 
IF(TEXT(Country_Office__c) = &quot;Czech Republic&quot;, &quot;Pařížská 127/20&quot;,&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address1</label>
    <type>Text</type>
</CustomField>