unpackaged/main/default/objects/Case/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <formula>IF(TEXT(Country_Office__c) = &quot;United Kingdom&quot;, &quot;Redhill, Surrey, RH1 1LU&quot;, 
IF(TEXT(Country_Office__c) = &quot;France&quot;, &quot;Paris, 75017&quot;, 
IF(TEXT(Country_Office__c) = &quot;Germany&quot;, &quot;Munich, 80637&quot;, 
IF(TEXT(Country_Office__c) = &quot;Italy&quot;, &quot;Rome, 00187&quot;, 
IF(TEXT(Country_Office__c) = &quot;Czech Republic&quot;, &quot;Prague, 110 00&quot;, 
IF(TEXT(Country_Office__c) = &quot;Ireland&quot;, &quot;Dublin, D4&quot;,&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address2</label>
    <type>Text</type>
</CustomField>