unpackaged/main/default/objects/Case/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <formula>IF(TEXT(Country_Office__c) = &quot;United Kingdom&quot;, &quot;United Kingdom&quot;, 
IF(TEXT(Country_Office__c) = &quot;Italy&quot;, &quot;Italy&quot;, 
IF(TEXT(Country_Office__c) = &quot;Czech Republic&quot;, &quot;Czech Republic&quot;, 
IF(TEXT(Country_Office__c) = &quot;France&quot;, &quot;France&quot;, 
IF(TEXT(Country_Office__c) = &quot;Germany&quot;, &quot;Germany&quot;, 
IF(TEXT(Country_Office__c) = &quot;Ireland&quot;, &quot;Ireland&quot;, &quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address3</label>
    <type>Text</type>
</CustomField>