unpackaged/main/default/objects/Case/fields/Alipay_Id__c.field-meta.xml
<CustomField>
    <fullName>Alipay_Id__c</fullName>
    <formula>Tax_Free_Form__r.Alipay_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alipay Id</label>
    <type>Text</type>
</CustomField>