unpackaged/main/default/objects/Case/fields/Average_Adjusted_Response_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Adjusted_Response_Days__c</fullName>
    <formula>Adjusted_Response_Time__c / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Adjusted Response Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>