unpackaged/main/default/objects/Case/fields/Case_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Account Name</label>
    <type>Text</type>
</CustomField>