unpackaged/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party TF activation</fullName>
            </value>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Additional Information Requested</fullName>
            </value>
            <value>
                <fullName>Additional training</fullName>
            </value>
            <value>
                <fullName>Address to Send Tax Free Form</fullName>
            </value>
            <value>
                <fullName>Amend Workflow</fullName>
            </value>
            <value>
                <fullName>Application Update</fullName>
            </value>
            <value>
                <fullName>Cables order</fullName>
            </value>
            <value>
                <fullName>Change of Details</fullName>
            </value>
            <value>
                <fullName>Change of Solution</fullName>
            </value>
            <value>
                <fullName>Change of Subscription Details</fullName>
            </value>
            <value>
                <fullName>Cheque/Prepaid Card Cancellation</fullName>
            </value>
            <value>
                <fullName>Code 99/AQ Mailing</fullName>
            </value>
            <value>
                <fullName>Complains</fullName>
            </value>
            <value>
                <fullName>Configuration Error</fullName>
            </value>
            <value>
                <fullName>Configuration Update</fullName>
            </value>
            <value>
                <fullName>Consumable Orders</fullName>
            </value>
            <value>
                <fullName>Currency &amp; Exchange Rate</fullName>
            </value>
            <value>
                <fullName>Customs</fullName>
            </value>
            <value>
                <fullName>Debit – No Receipt</fullName>
            </value>
            <value>
                <fullName>Debit – No Stamp</fullName>
            </value>
            <value>
                <fullName>Debit – No Voucher</fullName>
            </value>
            <value>
                <fullName>Debit vs Recredit Amount</fullName>
            </value>
            <value>
                <fullName>E-Customs error</fullName>
            </value>
            <value>
                <fullName>Email Template</fullName>
            </value>
            <value>
                <fullName>Error with Figures</fullName>
            </value>
            <value>
                <fullName>Export Request</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Forgot Password</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>