unpackaged/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>New Partnership</fullName>
            </value>
            <value>
                <fullName>Questions about Tax Free</fullName>
            </value>
            <value>
                <fullName>Voiding</fullName>
            </value>
            <value>
                <fullName>GLTTP</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>