unpackaged/main/default/objects/Case/fields/Change_Request_Approver__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>