unpackaged/main/default/objects/Case/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <formula>IF (TEXT(Other_Tax_Free_Provider__c) = &quot;Global Blue&quot;, &quot;www.globalblue.com&quot;, 
IF (TEXT(Other_Tax_Free_Provider__c) = &quot;GB Tax Free&quot;, &quot;www.gbtaxfree.com&quot;, 
IF (TEXT(Other_Tax_Free_Provider__c) = &quot;EuroRefund&quot;, &quot;www.eurorefund.com&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Details</label>
    <type>Text</type>
</CustomField>