unpackaged/main/default/objects/Case/fields/Country_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Purchase__c</fullName>
    <formula>TEXT(Tax_Free_Form__r.Country_of_Purchase1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of Purchase</label>
    <type>Text</type>
</CustomField>