unpackaged/main/default/objects/Case/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <formula>Tax_Free_Form__r.Credit_Card_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Number</label>
    <type>Text</type>
</CustomField>