unpackaged/main/default/objects/Case/fields/Customer_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Incident_Number__c</fullName>
    <label>Customer Incident Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>