unpackaged/main/default/objects/Case/fields/Customs_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Customs_Date_Stamp__c</fullName>
    <formula>Tax_Free_Form__r.Customs_Date_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customs Date Stamp</label>
    <type>Date</type>
</CustomField>