unpackaged/main/default/objects/Case/fields/Date_Time_Replied__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Replied__c</fullName>
    <label>Date/Time Replied</label>
    <type>DateTime</type>
</CustomField>