unpackaged/main/default/objects/Case/fields/DCC_System_Affected_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCC_System_Affected_Detail__c</fullName>
    <label>DCC System Affected Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DCC_Systems_Affected__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>AMPS Settlement</fullName>
            </value>
            <value>
                <fullName>Authorisation Host</fullName>
            </value>
            <value>
                <fullName>CRT / BRT</fullName>
            </value>
            <value>
                <fullName>CSMS</fullName>
            </value>
            <value>
                <fullName>CSMS.NET</fullName>
            </value>
            <value>
                <fullName>DCC Datawarehouse</fullName>
            </value>
            <value>
                <fullName>DCC Gateway</fullName>
            </value>
            <value>
                <fullName>DCC Orchestrator</fullName>
            </value>
            <value>
                <fullName>Dynamics Rates Generator</fullName>
            </value>
            <value>
                <fullName>FDVO</fullName>
            </value>
            <value>
                <fullName>File Movements</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
            <value>
                <fullName>I&#39;ve included a detailed description.</fullName>
            </value>
            <value>
                <fullName>MCP / Way4</fullName>
            </value>
            <value>
                <fullName>Merchant Management</fullName>
            </value>
            <value>
                <fullName>Operational Reporting</fullName>
            </value>
            <value>
                <fullName>Operation Reporting</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>POS Batch Host</fullName>
            </value>
            <value>
                <fullName>POS Softpay</fullName>
            </value>
            <value>
                <fullName>POS Superpay</fullName>
            </value>
            <value>
                <fullName>Rates Configuration</fullName>
            </value>
            <value>
                <fullName>Tokenisation</fullName>
            </value>
            <value>
                <fullName>TPP</fullName>
            </value>
            <value>
                <fullName>Treasury Management</fullName>
            </value>
            <value>
                <fullName>Visa/Mastercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>