unpackaged/main/default/objects/Case/fields/DCC_Systems_Affected__c.field-meta.xml
<CustomField>
    <fullName>DCC_Systems_Affected__c</fullName>
    <label>DCC Systems Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Customer Facing</fullName>
            </value>
            <value>
                <fullName>Backoffice</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>