unpackaged/main/default/objects/Case/fields/DCC_Systems_Affected_Conc__c.field-meta.xml
<CustomField>
    <fullName>DCC_Systems_Affected_Conc__c</fullName>
    <formula>TEXT(DCC_Systems_Affected__c) &amp; &quot; - &quot; &amp; TEXT(DCC_System_Affected_Detail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC Systems Affected Conc</label>
    <type>Text</type>
</CustomField>