unpackaged/main/default/objects/Case/fields/Field_Service_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Ref_No__c</fullName>
    <label>Field Service Ref No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>