unpackaged/main/default/objects/Case/fields/Latest_Message__c.field-meta.xml
<CustomField>
    <fullName>Latest_Message__c</fullName>
    <label>Latest Message</label>
    <type>DateTime</type>
</CustomField>