unpackaged/main/default/objects/Case/fields/No_Response__c.field-meta.xml
<CustomField>
    <fullName>No_Response__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>