unpackaged/main/default/objects/Case/fields/No_Response_Re_opened__c.field-meta.xml
<CustomField>
    <fullName>No_Response_Re_opened__c</fullName>
    <formula>NOW() - Re_opened_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Response Re-opened</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>