unpackaged/main/default/objects/Case/fields/Notify_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The case must have a related account for the alert to work.</inlineHelpText>
    <label>Notify Account Owner</label>
    <type>Checkbox</type>
</CustomField>