unpackaged/main/default/objects/Case/fields/Other_Tax_Free_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Tax_Free_Provider__c</fullName>
    <label>Other Tax Free Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro Refund</fullName>
            </value>
            <value>
                <fullName>GB Tax Free</fullName>
            </value>
            <value>
                <fullName>Global Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>