unpackaged/main/default/objects/Case/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>IF(Owner:User.UserRole.Name  = &quot;Customer Service GB&quot;, &quot;UK&quot;,
IF(Owner:User.UserRole.Name  = &quot;UK Sales Support&quot;, &quot;UK&quot;,
IF(Owner:Queue.QueueName = &quot;Merchant Services GB&quot;, &quot;UK&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>