unpackaged/main/default/objects/Case/fields/P2_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>P2_Entry_Date__c</fullName>
    <formula>Tax_Free_Form__r.P2_Entry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P2 Entry Date</label>
    <type>DateTime</type>
</CustomField>