unpackaged/main/default/objects/Case/fields/Planet_Pass_Type__c.field-meta.xml
<CustomField>
    <fullName>Planet_Pass_Type__c</fullName>
    <formula>Tax_Free_Form__r.Premier_Pass_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Pass Type</label>
    <type>Text</type>
</CustomField>