unpackaged/main/default/objects/Case/fields/POS_Account__c.field-meta.xml
<CustomField>
    <fullName>POS_Account__c</fullName>
    <formula>POS_Solution__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Account</label>
    <type>Text</type>
</CustomField>