unpackaged/main/default/objects/Case/fields/POS_Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution_Name__c</fullName>
    <formula>POS_Solution__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Solution Name</label>
    <type>Text</type>
</CustomField>