unpackaged/main/default/objects/Case/fields/POS_Support__c.field-meta.xml
<CustomField>
    <fullName>POS_Support__c</fullName>
    <formula>IF(POS_Solution__c &lt;&gt; &quot;&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Support</label>
    <type>Checkbox</type>
</CustomField>