unpackaged/main/default/objects/Case/fields/Re_opened_Age__c.field-meta.xml
<CustomField>
    <fullName>Re_opened_Age__c</fullName>
    <formula>NOW() - Re_opened_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-opened Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>