unpackaged/main/default/objects/Case/fields/Re_opened_Case_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Re_opened_Case_First_Response__c</fullName>
    <label>Re-opened Case First Response</label>
    <type>DateTime</type>
</CustomField>