unpackaged/main/default/objects/Case/fields/Re_opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_opened_Date__c</fullName>
    <label>Re-opened Date</label>
    <type>DateTime</type>
</CustomField>