unpackaged/main/default/objects/Case/fields/Re_opened_Response_Target__c.field-meta.xml
<CustomField>
    <fullName>Re_opened_Response_Target__c</fullName>
    <formula>IF(Re_opened_Response_Time__c &lt; 3, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-opened Response Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>