unpackaged/main/default/objects/Case/fields/Re_opened_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Re_opened_Response_Time__c</fullName>
    <formula>(Re_opened_Case_First_Response__c  -  Re_opened_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-opened Response Time</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>