unpackaged/main/default/objects/Case/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <formula>Tax_Free_Form__r.Refund_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Method</label>
    <type>Text</type>
</CustomField>